<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.testingproject.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:id="@+id/tvText"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="value 1"
        android:id="@+id/etValOne"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="value 2"
        android:id="@+id/etValTwo"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="press"
        android:id="@+id/btnPress"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="press2"
        android:id="@+id/btnPress2"/>

</LinearLayout>
